# Real_Time_Chat_App

./: Cargo.toml
src/: main.rs
static/: index.html
