[package]
name = "untitled"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
warp = "0.3.6"
tokio = { version = "1.36.0", features = ["macros", "sync", "rt-multi-thread"]}
tokio-stream = { version = "0.1.14", features = ["net"] }

sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio", "macros"] }



